admission-control-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: filter-admission-control-svc
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: echoserver
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.filters.http.admission_control
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.admission_control.v3.AdmissionControl
            enabled:
              default_value: true
              runtime_key: admission_control.enabled
            sampling_window: 1s
            sr_threshold:
              default_value:
                value: 95.0
              runtime_key: admission_control.sr_threshold
            aggression:
              default_value: 1.0
              runtime_key: admission_control.aggression
            rps_threshold:
              default_value: 1
              runtime_key: admission_control.rps_threshold
            max_rejection_probability:
              default_value:
                value: 95.0
              runtime_key: admission_control.max_rejection_probability
            success_criteria:
              http_criteria:
                http_success_status:
                - start: 100
                  end: 400
                - start: 404
                  end: 404
